# transitbuddy

./: LICENSE  README  README.linux  README.md
gazebo_human_receiver/: CMakeLists.txt  package.xml
gazebo_human_receiver/cfg/: human_receiver.cfg
gazebo_human_receiver/include/gazebo_human_receiver/: gazebo_model_templates.h  gazebo_ros_factory.h
gazebo_human_receiver/include/v4r_gazebo/: gazebo_ros_factory.h
gazebo_human_receiver/launch/: world.launch
gazebo_human_receiver/src/: factory_and_fini.cpp  gazebo_ros_factory.cpp
gazebo_human_receiver/worlds/: factory_and_fini.world  floor.world
humanflow_bridge/: CMakeLists.txt  HumanFlow_Bridge.sln  HumanFlow_Bridge.vcxproj  module.xml  package.xml
humanflow_bridge/include/humanflow_bridge/: PoseWithID.h  PoseWithIDArray.h  humanflow_bridge.h  humanflow_bridge_defaults.h
humanflow_bridge/include/mpedplus/: BooleanParameter.h  DoubleParameter.h  MpedMessage.h  Region.h  Shape.h  StringParameter.h
humanflow_bridge/include/transitbuddy_msgs/: PoseWithIDArray.h
humanflow_bridge/launch/: robot_publisher.launch
humanflow_bridge/lib/: MpedClientAPId.lib
humanflow_bridge/msg/: PoseWithIDArray.msg
humanflow_bridge/src/: humanflow_bridge_node.cpp
transitbuddy_human_publisher/: HumanFlow_Bridge.sln  HumanFlow_Bridge.vcxproj  StartHumanflow.txt  module.xml
transitbuddy_human_publisher/include/humanflow_bridge/: humanflow_bridge.h  humanflow_bridge_defaults.h
transitbuddy_human_publisher/include/mpedplus/: AgentDefinition.h  Basin.h  BasinConnection.h  CellDefinition.h  Facility.h  Link.h  LongParameter.h  MpedClientAPI.h  Node.h  ODEntry.h  Parameter.h  Scenario.h  Section.h  Tool.h  ToolingRegion.h
transitbuddy_human_publisher/include/transitbuddy_msgs/: LineWithID.h  LineWithIDArray.h  PoseWithID.h
transitbuddy_human_publisher/launch/: human_publisher.launch
transitbuddy_human_publisher/lib/: MpedClientAPI.lib
transitbuddy_human_publisher/src/: humanflow_bridge_node.cpp
transitbuddy_msgs/: CMakeLists.txt  package.xml
transitbuddy_msgs/msg/: LineWithID.msg  LineWithIDArray.msg  PoseWithID.msg  PoseWithIDArray.msg
transitbuddy_msgs/src/: dummy_publisher.cpp
transitbuddy_robot_publisher/: CMakeLists.txt  package.xml
transitbuddy_robot_publisher/include/transitbuddy_robot_publisher/: robot_publisher_defaults.h  robot_publisher_node.h
transitbuddy_robot_publisher/src/: robot_publisher_node.cpp
